--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -120,8 +120,16 @@
             "after": ["j"]
         },
         {
+            "before": ["<S-n>"],
+            "after": ["<S-j>"]
+        },
+        {
             "before": ["j"],
             "after": ["n"]
+        },
+        {
+            "before": ["<S-j>"],
+            "after": ["<S-n>"]
         },
         {
             "before": ["e"],
@@ -130,6 +138,10 @@
         {
             "before": ["k"],
             "after": ["e"]
+        },
+        {
+            "before": ["<S-k>"],
+            "after": ["<S-e>"]
         },
         {
             "before": ["i"],
@@ -142,6 +154,10 @@
         {
             "before": ["u"],
             "after": ["i"]
+        },
+        {
+            "before": ["<S-u>"],
+            "after": ["<S-i>"]
         }
     ]
 }
