Select all: ii -> uu

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -135,11 +135,11 @@
             "after": [":"]
         },
         {
-            "before": ["d", "i", "i"],
+            "before": ["d", "u", "u"],
             "after": ["g", "g", "d", "G"]
         },
         {
-            "before": ["c", "i", "i"],
+            "before": ["c", "u", "u"],
             "after": ["g", "g", "c", "G"]
         }
     ],
@@ -189,7 +189,7 @@
             "after": ["<S-i>"]
         },
         {
-            "before": ["i", "i"],
+            "before": ["u", "u"],
             "after": ["<Esc>", "g", "g", "V", "G"]
         }
     ]
