--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -14,9 +14,10 @@
     "python.defaultInterpreterPath": "~/snek/bin/python3",
     "window.title": "${dirty}💩 ${activeEditorShort}",
     "editor.linkedEditing": true,
+    "editor.ruler": 80,
     "jupyter.askForKernelRestart": false,
     "notebook.output.textLineLimit": 500,
-    "window.zoomLevel": -2,
+    "window.zoomLevel": 0,
     "files.trimTrailingWhitespace": true,
     "workbench.editor.untitled.hint": "hidden",
     "latex-workshop.latex.recipes": [
