space/colon visual mode

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -44,6 +44,10 @@
     ],
     "vim.visualModeKeyBindingsNonRecursive": [
         {
+            "before": [" "],
+            "after": [":"]
+        },
+        {
             "before": ["i", "i"],
             "after": ["<Esc>", "g", "g", "V", "G"]
         }
