Allow root for Jupyter

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -36,6 +36,9 @@
         }
     ],
     "jupyter.interactiveWindow.cellMarker.default": "#--",
+    "jupyter.jupyterCommandLineArguments": [
+        "--allow-root"
+    ],
     "[python]": {
         "editor.formatOnType": true
     },
